# Version History

## unreleased

## 0.8.1

* MCCS-561 - Fix location of assignedResources attribute init

## 0.8.0

* MCCS-442 - Restart command implementation
* MCCS-459 - Integration of new json strings
* MCCS-554 - Update container images
* MCCS-452 - Import/adapt AAVS pointing→delay routines
* MCCS-271 - add ApplyPointing to StationBeam (and Station)
* MCCS-547 - RTD bugfix again
* MCCS-549 - yaml bugfix
* MCCS-510 - Message queue integration for "On" command
* MCCS-420 - Imported and edited Tile object for tpm 1.2 and 1.6
* MCCS-422 - Add DAQ packet generation functionalities into Tango device
* MCCS-511 - message queue with unit tests
* MCCS-421 - Added support for TPM test signal generator to Tango tile
* MCCS-523 - skip configure as well
* MCCS-410 - Implement interface of Tango device with hardware Subrack
* MCCS-517 - Fix to integration tests
* MCCS-502 - convert apiu to svg & add subarray structure class diagram
* MCCS-441 - enable abort and obsreset
* MCCS-477 - package rename: ska.low.mccs -> ska_low_mccs
* MCCS-386 - mock builders
* MCCS-475 - machine requirements docs
* MCCS-473 - tests and harness in a single package
* MCCS-458 - MccsDeviceProxy and unify backoff_connect
* MCCS-392 - Add missing docs (including MCCS-490 race condition workaround)
* MCCS-357 - Add autogenerated class diagrams
* MCCS-391 - Remove DeviceProxy.get_fqdn() calls
* MCCS-388 - Memorized simulationMode
* MCCS-383 - Update to ska-tango-base 0.9.1
* MCCS-257 - Upgrade of TPI Tango device to the ICD/ECD
* MCCS-335 - Added typehints to MCCS controller_device
* MCCS-384 - docstring coverage to 100%
* MCCS-378 - Support for simulators with dynamic values
* MCCS-116 - Add station beam health monitoring to MCCS Station

## 0.7.0

* MCCS-381 - Move "Configure" command implementation to station beams resource manager
* MCCS-368 - Update resource usage
* MCCS-258 - Update of TPI Tango device to obDevice of lmcBaseClasses
* MCCS-359 - Add scan, abort and obsreset unit tests