@@ -3,7 +3,7 @@ numpy == 1.19.2
 scipy
 pytango >= 9.3.3
 jsonschema >= 3.2.0
-ska-tango-base >= 0.9.1
+ska-tango-base == 0.10.1
 fire
 future
 requests
